fix nav not responsive

--- a/css/my.scss
+++ b/css/my.scss
@@ -1,6 +1,12 @@
 $primary-color: rgb(235,231,196) !important;
 $secondary-color: rgb(147,106,69) !important;
 
+$font-montserrat: 'Montserrat', sans-serif;
+
+body{
+    font-family: $font-montserrat;
+}
+
 .c-main{
     color : $primary-color;
 }
